compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> query
Rule 1     query -> SELECT select_list FROM IDENTIFIER where_clause orderby_clause limit_clause
Rule 2     column_list -> column_list COMMA IDENTIFIER
Rule 3     column_list -> IDENTIFIER
Rule 4     where_clause -> WHERE condition
Rule 5     where_clause -> <empty>
Rule 6     select_list -> ASTERISK
Rule 7     select_list -> column_list
Rule 8     select_list -> aggregate_function
Rule 9     aggregate_function -> COUNT LPAREN ASTERISK RPAREN
Rule 10    aggregate_function -> COUNT LPAREN IDENTIFIER RPAREN
Rule 11    aggregate_function -> SUM LPAREN IDENTIFIER RPAREN
Rule 12    aggregate_function -> AVG LPAREN IDENTIFIER RPAREN
Rule 13    aggregate_function -> MIN LPAREN IDENTIFIER RPAREN
Rule 14    aggregate_function -> MAX LPAREN IDENTIFIER RPAREN
Rule 15    condition -> condition AND condition
Rule 16    condition -> condition OR condition
Rule 17    condition -> IDENTIFIER comparison_operator value
Rule 18    comparison_operator -> EQUALS
Rule 19    comparison_operator -> NOTEQUALS
Rule 20    comparison_operator -> LESSTHAN
Rule 21    comparison_operator -> LESSEQUAL
Rule 22    comparison_operator -> GREATERTHAN
Rule 23    comparison_operator -> GREATEREQUAL
Rule 24    value -> NUMBER
Rule 25    value -> STRING
Rule 26    value -> LPAREN query RPAREN
Rule 27    orderby_clause -> ORDERBY IDENTIFIER
Rule 28    orderby_clause -> ORDERBY IDENTIFIER DESC
Rule 29    orderby_clause -> <empty>
Rule 30    limit_clause -> LIMIT NUMBER
Rule 31    limit_clause -> <empty>

Terminals, with rules where they appear

AND                  : 15
ASTERISK             : 6 9
AVG                  : 12
COMMA                : 2
COUNT                : 9 10
DESC                 : 28
EQUALS               : 18
FROM                 : 1
GREATEREQUAL         : 23
GREATERTHAN          : 22
IDENTIFIER           : 1 2 3 10 11 12 13 14 17 27 28
LESSEQUAL            : 21
LESSTHAN             : 20
LIMIT                : 30
LPAREN               : 9 10 11 12 13 14 26
MAX                  : 14
MIN                  : 13
NOTEQUALS            : 19
NUMBER               : 24 30
OR                   : 16
ORDERBY              : 27 28
RPAREN               : 9 10 11 12 13 14 26
SELECT               : 1
STRING               : 25
SUM                  : 11
WHERE                : 4
error                : 

Nonterminals, with rules where they appear

aggregate_function   : 8
column_list          : 2 7
comparison_operator  : 17
condition            : 4 15 15 16 16
limit_clause         : 1
orderby_clause       : 1
query                : 26 0
select_list          : 1
value                : 17
where_clause         : 1

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . SELECT select_list FROM IDENTIFIER where_clause orderby_clause limit_clause

    SELECT          shift and go to state 2

    query                          shift and go to state 1

state 1

    (0) S' -> query .



state 2

    (1) query -> SELECT . select_list FROM IDENTIFIER where_clause orderby_clause limit_clause
    (6) select_list -> . ASTERISK
    (7) select_list -> . column_list
    (8) select_list -> . aggregate_function
    (2) column_list -> . column_list COMMA IDENTIFIER
    (3) column_list -> . IDENTIFIER
    (9) aggregate_function -> . COUNT LPAREN ASTERISK RPAREN
    (10) aggregate_function -> . COUNT LPAREN IDENTIFIER RPAREN
    (11) aggregate_function -> . SUM LPAREN IDENTIFIER RPAREN
    (12) aggregate_function -> . AVG LPAREN IDENTIFIER RPAREN
    (13) aggregate_function -> . MIN LPAREN IDENTIFIER RPAREN
    (14) aggregate_function -> . MAX LPAREN IDENTIFIER RPAREN

    ASTERISK        shift and go to state 5
    IDENTIFIER      shift and go to state 4
    COUNT           shift and go to state 8
    SUM             shift and go to state 9
    AVG             shift and go to state 10
    MIN             shift and go to state 11
    MAX             shift and go to state 12

    select_list                    shift and go to state 3
    column_list                    shift and go to state 6
    aggregate_function             shift and go to state 7

state 3

    (1) query -> SELECT select_list . FROM IDENTIFIER where_clause orderby_clause limit_clause

    FROM            shift and go to state 13


state 4

    (3) column_list -> IDENTIFIER .

    COMMA           reduce using rule 3 (column_list -> IDENTIFIER .)
    FROM            reduce using rule 3 (column_list -> IDENTIFIER .)


state 5

    (6) select_list -> ASTERISK .

    FROM            reduce using rule 6 (select_list -> ASTERISK .)


state 6

    (7) select_list -> column_list .
    (2) column_list -> column_list . COMMA IDENTIFIER

    FROM            reduce using rule 7 (select_list -> column_list .)
    COMMA           shift and go to state 14


state 7

    (8) select_list -> aggregate_function .

    FROM            reduce using rule 8 (select_list -> aggregate_function .)


state 8

    (9) aggregate_function -> COUNT . LPAREN ASTERISK RPAREN
    (10) aggregate_function -> COUNT . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 15


state 9

    (11) aggregate_function -> SUM . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 16


state 10

    (12) aggregate_function -> AVG . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 17


state 11

    (13) aggregate_function -> MIN . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 18


state 12

    (14) aggregate_function -> MAX . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 19


state 13

    (1) query -> SELECT select_list FROM . IDENTIFIER where_clause orderby_clause limit_clause

    IDENTIFIER      shift and go to state 20


state 14

    (2) column_list -> column_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 21


state 15

    (9) aggregate_function -> COUNT LPAREN . ASTERISK RPAREN
    (10) aggregate_function -> COUNT LPAREN . IDENTIFIER RPAREN

    ASTERISK        shift and go to state 22
    IDENTIFIER      shift and go to state 23


state 16

    (11) aggregate_function -> SUM LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 24


state 17

    (12) aggregate_function -> AVG LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 25


state 18

    (13) aggregate_function -> MIN LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 26


state 19

    (14) aggregate_function -> MAX LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 27


state 20

    (1) query -> SELECT select_list FROM IDENTIFIER . where_clause orderby_clause limit_clause
    (4) where_clause -> . WHERE condition
    (5) where_clause -> .

    WHERE           shift and go to state 29
    ORDERBY         reduce using rule 5 (where_clause -> .)
    LIMIT           reduce using rule 5 (where_clause -> .)
    $end            reduce using rule 5 (where_clause -> .)
    RPAREN          reduce using rule 5 (where_clause -> .)

    where_clause                   shift and go to state 28

state 21

    (2) column_list -> column_list COMMA IDENTIFIER .

    COMMA           reduce using rule 2 (column_list -> column_list COMMA IDENTIFIER .)
    FROM            reduce using rule 2 (column_list -> column_list COMMA IDENTIFIER .)


state 22

    (9) aggregate_function -> COUNT LPAREN ASTERISK . RPAREN

    RPAREN          shift and go to state 30


state 23

    (10) aggregate_function -> COUNT LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 31


state 24

    (11) aggregate_function -> SUM LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 32


state 25

    (12) aggregate_function -> AVG LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 33


state 26

    (13) aggregate_function -> MIN LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 34


state 27

    (14) aggregate_function -> MAX LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 35


state 28

    (1) query -> SELECT select_list FROM IDENTIFIER where_clause . orderby_clause limit_clause
    (27) orderby_clause -> . ORDERBY IDENTIFIER
    (28) orderby_clause -> . ORDERBY IDENTIFIER DESC
    (29) orderby_clause -> .

    ORDERBY         shift and go to state 37
    LIMIT           reduce using rule 29 (orderby_clause -> .)
    $end            reduce using rule 29 (orderby_clause -> .)
    RPAREN          reduce using rule 29 (orderby_clause -> .)

    orderby_clause                 shift and go to state 36

state 29

    (4) where_clause -> WHERE . condition
    (15) condition -> . condition AND condition
    (16) condition -> . condition OR condition
    (17) condition -> . IDENTIFIER comparison_operator value

    IDENTIFIER      shift and go to state 39

    condition                      shift and go to state 38

state 30

    (9) aggregate_function -> COUNT LPAREN ASTERISK RPAREN .

    FROM            reduce using rule 9 (aggregate_function -> COUNT LPAREN ASTERISK RPAREN .)


state 31

    (10) aggregate_function -> COUNT LPAREN IDENTIFIER RPAREN .

    FROM            reduce using rule 10 (aggregate_function -> COUNT LPAREN IDENTIFIER RPAREN .)


state 32

    (11) aggregate_function -> SUM LPAREN IDENTIFIER RPAREN .

    FROM            reduce using rule 11 (aggregate_function -> SUM LPAREN IDENTIFIER RPAREN .)


state 33

    (12) aggregate_function -> AVG LPAREN IDENTIFIER RPAREN .

    FROM            reduce using rule 12 (aggregate_function -> AVG LPAREN IDENTIFIER RPAREN .)


state 34

    (13) aggregate_function -> MIN LPAREN IDENTIFIER RPAREN .

    FROM            reduce using rule 13 (aggregate_function -> MIN LPAREN IDENTIFIER RPAREN .)


state 35

    (14) aggregate_function -> MAX LPAREN IDENTIFIER RPAREN .

    FROM            reduce using rule 14 (aggregate_function -> MAX LPAREN IDENTIFIER RPAREN .)


state 36

    (1) query -> SELECT select_list FROM IDENTIFIER where_clause orderby_clause . limit_clause
    (30) limit_clause -> . LIMIT NUMBER
    (31) limit_clause -> .

    LIMIT           shift and go to state 41
    $end            reduce using rule 31 (limit_clause -> .)
    RPAREN          reduce using rule 31 (limit_clause -> .)

    limit_clause                   shift and go to state 40

state 37

    (27) orderby_clause -> ORDERBY . IDENTIFIER
    (28) orderby_clause -> ORDERBY . IDENTIFIER DESC

    IDENTIFIER      shift and go to state 42


state 38

    (4) where_clause -> WHERE condition .
    (15) condition -> condition . AND condition
    (16) condition -> condition . OR condition

    ORDERBY         reduce using rule 4 (where_clause -> WHERE condition .)
    LIMIT           reduce using rule 4 (where_clause -> WHERE condition .)
    $end            reduce using rule 4 (where_clause -> WHERE condition .)
    RPAREN          reduce using rule 4 (where_clause -> WHERE condition .)
    AND             shift and go to state 43
    OR              shift and go to state 44


state 39

    (17) condition -> IDENTIFIER . comparison_operator value
    (18) comparison_operator -> . EQUALS
    (19) comparison_operator -> . NOTEQUALS
    (20) comparison_operator -> . LESSTHAN
    (21) comparison_operator -> . LESSEQUAL
    (22) comparison_operator -> . GREATERTHAN
    (23) comparison_operator -> . GREATEREQUAL

    EQUALS          shift and go to state 46
    NOTEQUALS       shift and go to state 47
    LESSTHAN        shift and go to state 48
    LESSEQUAL       shift and go to state 49
    GREATERTHAN     shift and go to state 50
    GREATEREQUAL    shift and go to state 51

    comparison_operator            shift and go to state 45

state 40

    (1) query -> SELECT select_list FROM IDENTIFIER where_clause orderby_clause limit_clause .

    $end            reduce using rule 1 (query -> SELECT select_list FROM IDENTIFIER where_clause orderby_clause limit_clause .)
    RPAREN          reduce using rule 1 (query -> SELECT select_list FROM IDENTIFIER where_clause orderby_clause limit_clause .)


state 41

    (30) limit_clause -> LIMIT . NUMBER

    NUMBER          shift and go to state 52


state 42

    (27) orderby_clause -> ORDERBY IDENTIFIER .
    (28) orderby_clause -> ORDERBY IDENTIFIER . DESC

    LIMIT           reduce using rule 27 (orderby_clause -> ORDERBY IDENTIFIER .)
    $end            reduce using rule 27 (orderby_clause -> ORDERBY IDENTIFIER .)
    RPAREN          reduce using rule 27 (orderby_clause -> ORDERBY IDENTIFIER .)
    DESC            shift and go to state 53


state 43

    (15) condition -> condition AND . condition
    (15) condition -> . condition AND condition
    (16) condition -> . condition OR condition
    (17) condition -> . IDENTIFIER comparison_operator value

    IDENTIFIER      shift and go to state 39

    condition                      shift and go to state 54

state 44

    (16) condition -> condition OR . condition
    (15) condition -> . condition AND condition
    (16) condition -> . condition OR condition
    (17) condition -> . IDENTIFIER comparison_operator value

    IDENTIFIER      shift and go to state 39

    condition                      shift and go to state 55

state 45

    (17) condition -> IDENTIFIER comparison_operator . value
    (24) value -> . NUMBER
    (25) value -> . STRING
    (26) value -> . LPAREN query RPAREN

    NUMBER          shift and go to state 57
    STRING          shift and go to state 58
    LPAREN          shift and go to state 59

    value                          shift and go to state 56

state 46

    (18) comparison_operator -> EQUALS .

    NUMBER          reduce using rule 18 (comparison_operator -> EQUALS .)
    STRING          reduce using rule 18 (comparison_operator -> EQUALS .)
    LPAREN          reduce using rule 18 (comparison_operator -> EQUALS .)


state 47

    (19) comparison_operator -> NOTEQUALS .

    NUMBER          reduce using rule 19 (comparison_operator -> NOTEQUALS .)
    STRING          reduce using rule 19 (comparison_operator -> NOTEQUALS .)
    LPAREN          reduce using rule 19 (comparison_operator -> NOTEQUALS .)


state 48

    (20) comparison_operator -> LESSTHAN .

    NUMBER          reduce using rule 20 (comparison_operator -> LESSTHAN .)
    STRING          reduce using rule 20 (comparison_operator -> LESSTHAN .)
    LPAREN          reduce using rule 20 (comparison_operator -> LESSTHAN .)


state 49

    (21) comparison_operator -> LESSEQUAL .

    NUMBER          reduce using rule 21 (comparison_operator -> LESSEQUAL .)
    STRING          reduce using rule 21 (comparison_operator -> LESSEQUAL .)
    LPAREN          reduce using rule 21 (comparison_operator -> LESSEQUAL .)


state 50

    (22) comparison_operator -> GREATERTHAN .

    NUMBER          reduce using rule 22 (comparison_operator -> GREATERTHAN .)
    STRING          reduce using rule 22 (comparison_operator -> GREATERTHAN .)
    LPAREN          reduce using rule 22 (comparison_operator -> GREATERTHAN .)


state 51

    (23) comparison_operator -> GREATEREQUAL .

    NUMBER          reduce using rule 23 (comparison_operator -> GREATEREQUAL .)
    STRING          reduce using rule 23 (comparison_operator -> GREATEREQUAL .)
    LPAREN          reduce using rule 23 (comparison_operator -> GREATEREQUAL .)


state 52

    (30) limit_clause -> LIMIT NUMBER .

    $end            reduce using rule 30 (limit_clause -> LIMIT NUMBER .)
    RPAREN          reduce using rule 30 (limit_clause -> LIMIT NUMBER .)


state 53

    (28) orderby_clause -> ORDERBY IDENTIFIER DESC .

    LIMIT           reduce using rule 28 (orderby_clause -> ORDERBY IDENTIFIER DESC .)
    $end            reduce using rule 28 (orderby_clause -> ORDERBY IDENTIFIER DESC .)
    RPAREN          reduce using rule 28 (orderby_clause -> ORDERBY IDENTIFIER DESC .)


state 54

    (15) condition -> condition AND condition .
    (15) condition -> condition . AND condition
    (16) condition -> condition . OR condition

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ORDERBY         reduce using rule 15 (condition -> condition AND condition .)
    LIMIT           reduce using rule 15 (condition -> condition AND condition .)
    $end            reduce using rule 15 (condition -> condition AND condition .)
    RPAREN          reduce using rule 15 (condition -> condition AND condition .)
    AND             shift and go to state 43
    OR              shift and go to state 44

  ! AND             [ reduce using rule 15 (condition -> condition AND condition .) ]
  ! OR              [ reduce using rule 15 (condition -> condition AND condition .) ]


state 55

    (16) condition -> condition OR condition .
    (15) condition -> condition . AND condition
    (16) condition -> condition . OR condition

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ORDERBY         reduce using rule 16 (condition -> condition OR condition .)
    LIMIT           reduce using rule 16 (condition -> condition OR condition .)
    $end            reduce using rule 16 (condition -> condition OR condition .)
    RPAREN          reduce using rule 16 (condition -> condition OR condition .)
    AND             shift and go to state 43
    OR              shift and go to state 44

  ! AND             [ reduce using rule 16 (condition -> condition OR condition .) ]
  ! OR              [ reduce using rule 16 (condition -> condition OR condition .) ]


state 56

    (17) condition -> IDENTIFIER comparison_operator value .

    AND             reduce using rule 17 (condition -> IDENTIFIER comparison_operator value .)
    OR              reduce using rule 17 (condition -> IDENTIFIER comparison_operator value .)
    ORDERBY         reduce using rule 17 (condition -> IDENTIFIER comparison_operator value .)
    LIMIT           reduce using rule 17 (condition -> IDENTIFIER comparison_operator value .)
    $end            reduce using rule 17 (condition -> IDENTIFIER comparison_operator value .)
    RPAREN          reduce using rule 17 (condition -> IDENTIFIER comparison_operator value .)


state 57

    (24) value -> NUMBER .

    AND             reduce using rule 24 (value -> NUMBER .)
    OR              reduce using rule 24 (value -> NUMBER .)
    ORDERBY         reduce using rule 24 (value -> NUMBER .)
    LIMIT           reduce using rule 24 (value -> NUMBER .)
    $end            reduce using rule 24 (value -> NUMBER .)
    RPAREN          reduce using rule 24 (value -> NUMBER .)


state 58

    (25) value -> STRING .

    AND             reduce using rule 25 (value -> STRING .)
    OR              reduce using rule 25 (value -> STRING .)
    ORDERBY         reduce using rule 25 (value -> STRING .)
    LIMIT           reduce using rule 25 (value -> STRING .)
    $end            reduce using rule 25 (value -> STRING .)
    RPAREN          reduce using rule 25 (value -> STRING .)


state 59

    (26) value -> LPAREN . query RPAREN
    (1) query -> . SELECT select_list FROM IDENTIFIER where_clause orderby_clause limit_clause

    SELECT          shift and go to state 2

    query                          shift and go to state 60

state 60

    (26) value -> LPAREN query . RPAREN

    RPAREN          shift and go to state 61


state 61

    (26) value -> LPAREN query RPAREN .

    AND             reduce using rule 26 (value -> LPAREN query RPAREN .)
    OR              reduce using rule 26 (value -> LPAREN query RPAREN .)
    ORDERBY         reduce using rule 26 (value -> LPAREN query RPAREN .)
    LIMIT           reduce using rule 26 (value -> LPAREN query RPAREN .)
    $end            reduce using rule 26 (value -> LPAREN query RPAREN .)
    RPAREN          reduce using rule 26 (value -> LPAREN query RPAREN .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for AND in state 54 resolved as shift
WARNING: shift/reduce conflict for OR in state 54 resolved as shift
WARNING: shift/reduce conflict for AND in state 55 resolved as shift
WARNING: shift/reduce conflict for OR in state 55 resolved as shift
